--- a/client/src/pages/RecipePage.css
+++ b/client/src/pages/RecipePage.css
@@ -2,10 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
 
-body{
-  background-color:rgb(232, 225, 225);
-}
-
 .navbar {
   display: flex;
   align-items: center;
